tests/negative/gold/pkg_dot_in/main_test.gold
tests/negative/pkg_dot_in/main_test.toit:4:1: error: Import traverses package boundary: '<...>/tests/negative/pkg_dot_in/target/src/foo.toit'
import .target.src.foo
^~~~~~
Compilation failed.
